feat(circles): persist circle posts and complete circle feeds